# minimal-rust-kernel

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs
