[package]
name = "minimal-rust-kernel"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "minimal-rust-kernel"
test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
